# AgentUtteranceAnalysis

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml  reasonix.toml
crates/agentrace-analysis/: Cargo.toml
crates/agentrace-analysis/src/: graph.rs  lib.rs  stats.rs
crates/agentrace-analysis/src/behavior/: mod.rs
crates/agentrace-analysis/src/knowledge/: mod.rs
crates/agentrace-analysis/src/safety/: mod.rs
crates/agentrace-analysis/src/self_improvement/: mod.rs
crates/agentrace-analysis/tests/: coaching_pipeline_test.rs
crates/agentrace-cli/: Cargo.toml
crates/agentrace-cli/src/: main.rs
crates/agentrace-cli/tests/: e2e_test.rs
crates/agentrace-core/: Cargo.toml
crates/agentrace-core/src/: lib.rs  models.rs
crates/agentrace-discovery/: Cargo.toml
crates/agentrace-discovery/src/: lib.rs
crates/agentrace-embedding/: Cargo.toml
crates/agentrace-embedding/src/: candle.rs  lib.rs  onnx.rs
crates/agentrace-embedding/tests/: real_embedding_test.rs
crates/agentrace-llm/: Cargo.toml
crates/agentrace-llm/src/: lib.rs
crates/agentrace-parser/: Cargo.toml
crates/agentrace-parser/src/: json_parser.rs  lib.rs  sqlite_parser.rs  text_parser.rs
crates/agentrace-server/: Cargo.toml
crates/agentrace-server/src/: api.rs  lib.rs  main.rs  router.rs
crates/agentrace-storage/: Cargo.toml
crates/agentrace-storage/src/: lib.rs
crates/agentrace-storage/tests/: storage_test.rs  utterances_api_test.rs
examples/: sample_codex.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
records/: redesign-planning.org
reports/: analysis.md
src/agent_utterance_analysis/: __init__.py  analysis.py  cli.py  discovery.py  export.py  importer.py  language.py  models.py  parsers.py  storage.py  ui.py
tests/: test_analysis.py  test_language.py  test_opencode_parser.py  test_parsers.py
