[workspace]
resolver = "3"
members = [
    "crates/agentrace-core",
    "crates/agentrace-discovery",
    "crates/agentrace-parser",
    "crates/agentrace-storage",
    "crates/agentrace-embedding",
    "crates/agentrace-analysis",
    "crates/agentrace-llm",
    "crates/agentrace-cli",
    "crates/agentrace-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Zi Liang <zi1415926.liang@connect.polyu.hk>"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# SQLite + vector search
rusqlite = { version = "0.34", features = ["bundled"] }

# Embedding (ONNX)
ort = "2.0.0-rc.12"

# CLI
clap = { version = "4", features = ["derive"] }

# Web server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Utility
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"

# Asset embedding
rust-embed = "8"
mime_guess = "2"
