[package]
name = "agentrace-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
agentrace-core = { path = "../agentrace-core" }
agentrace-storage = { path = "../agentrace-storage" }
agentrace-embedding = { path = "../agentrace-embedding" }
agentrace-llm = { path = "../agentrace-llm" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex = "1"
ndarray = "0.17.2"

[dev-dependencies]
rand = "0.8"
