[package]
name = "agentrace-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
agentrace-core = { path = "../agentrace-core" }
agentrace-discovery = { path = "../agentrace-discovery" }
agentrace-parser = { path = "../agentrace-parser" }
agentrace-storage = { path = "../agentrace-storage" }
agentrace-embedding = { path = "../agentrace-embedding" }
agentrace-llm = { path = "../agentrace-llm" }
agentrace-analysis = { path = "../agentrace-analysis" }
agentrace-server = { path = "../agentrace-server" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
sha2.workspace = true
chrono.workspace = true
walkdir = "2"
shellexpand = "3"
