[package]
name = "agentrace-embedding"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
agentrace-core = { path = "../agentrace-core" }
ort.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokenizers = "0.21"
reqwest = { version = "0.12", features = ["blocking"] }
dirs = "5"
ndarray = "0.16"
