[package]
name = "agentrace-embedding"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
onnx = []

[dependencies]
agentrace-core = { path = "../agentrace-core" }
ort = { version = "2.0.0-rc.12", optional = true }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokenizers = { version = "0.21", optional = true }
reqwest = { version = "0.12", features = ["blocking"], optional = true }
dirs = { version = "5", optional = true }
