[package]
name = "agentrace-embedding"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
agentrace-core = { path = "../agentrace-core" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
tokenizers = "0.21"
hf-hub = "0.4"
dirs = "5"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true