[package]
name = "agentrace-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tracing.workspace = true
