[package]
name = "agentrace-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
agentrace-core = { path = "../agentrace-core" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sha2.workspace = true
anyhow.workspace = true
tracing.workspace = true
rusqlite.workspace = true
regex = "1"
