[package]
name = "agentrace-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
agentrace-core = { path = "../agentrace-core" }
agentrace-storage = { path = "../agentrace-storage" }
agentrace-analysis = { path = "../agentrace-analysis" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
tracing-subscriber.workspace = true
